--- a/config.env
+++ b/config.env
@@ -3,3 +3,7 @@ PORT=3000
 DATABASE=mongodb+srv://yuriidb:<PASSWORD>@cluster0-4ewud.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=iqVzHWB8@BJ@bTD
+
+# 32 charachters according the documentation
+JWT_SECRET=pepeg-secure-and-bery-long-jwt
+JWT_EXPIRES_IN=90d
