--- a/config.env
+++ b/config.env
@@ -6,4 +6,5 @@ DATABASE_PASSWORD=iqVzHWB8@BJ@bTD
 
 # 32 charachters according the documentation
 JWT_SECRET=pepeg-secure-and-bery-long-jwt
+# d-days, h-hours...
 JWT_EXPIRES_IN=90d
