nodemailer implimented and gmail too

--- a/config.env
+++ b/config.env
@@ -8,3 +8,9 @@ DATABASE_PASSWORD=iqVzHWB8@BJ@bTD
 JWT_SECRET=pepeg-secure-and-bery-long-jwt
 # d-days, h-hours...
 JWT_EXPIRES_IN=90d
+
+
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25 
+EMAIL_USERNAME=ab4bb5309706f6
+EMAIL_PASSWORD=e4358edbc9e58a
