--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.17",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.8",
     "slugify": "^1.3.4",
     "validator": "^10.11.0"
   },
