finished 10th section

--- a/config.env
+++ b/config.env
@@ -8,6 +8,7 @@ DATABASE_PASSWORD=iqVzHWB8@BJ@bTD
 JWT_SECRET=pepeg-secure-and-bery-long-jwt
 # d-days, h-hours...
 JWT_EXPIRES_IN=90d
+JWT_COOKIE=90
 
 
 EMAIL_HOST=smtp.mailtrap.io
